# Dot

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Source.cpp
CrashReporter/: CMakeLists.txt
CrashReporter/Source/: CrashReporterMain.cpp
Editor/: CMakeLists.txt
Editor/Shaders/: SimplePS.hlsl  SimpleVS.hlsl
Editor/Shaders/Common/: FullscreenTriangle.hlsli  Math.hlsli
Editor/Shaders/Culling/: ForwardPlusLightCullCS.hlsl  HZBDownsampleCS.hlsl
Editor/Shaders/PostProcess/: FXAA.hlsl  FullscreenVS.hlsl  GTAO.hlsl  GTAOBlur.hlsl  SSAO.hlsl  SSAOBlur.hlsl
Editor/Source/: Application.cpp  Application.h  Icons.h  Main.cpp
Editor/Source/Commands/: Command.h  CommandRegistry.cpp  CommandRegistry.h  CreateEntityCommands.h  EntityClipboard.cpp  EntityClipboard.h  MapCommands.h
Editor/Source/Export/: AssetDependencyCooker.cpp  AssetDependencyCooker.h  GameExporter.cpp  GameExporter.h
Editor/Source/Gizmos/: Gizmo.h  RayMath.h  RayPicker.cpp  RayPicker.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
Editor/Source/Lightmapping/: LightmapBaker.cpp  LightmapBaker.h  LightmapBakerSettings.h
Editor/Source/Map/: MapDocument.cpp  MapDocument.h
Editor/Source/Mcp/: McpBridgeFwd.h  McpBridgeProtocol.h  McpBridgeService.cpp  McpBridgeService.h  McpJson.h  McpWindowsTransport.h
Editor/Source/Panels/: AssetManagerPanel.cpp  AssetManagerPanel.h  ConsolePanel.cpp  ConsolePanel.h  DebugPanel.cpp  DebugPanel.h  EditorPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LightmapBakerPanel.cpp  LightmapBakerPanel.h  MapInspectorPanel.cpp  MapInspectorPanel.h  MapOutlinerPanel.cpp  MapOutlinerPanel.h  MapViewportToolController.cpp  MapViewportToolController.h  MaterialGraphPanel.cpp  MaterialGraphPanel.h  PanelChrome.h  PrefabViewerPanel.cpp  PrefabViewerPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h  SettingsPanel.cpp  SettingsPanel.h  TextEditorPanel.cpp  TextEditorPanel.h  TextureViewerPanel.cpp  TextureViewerPanel.h  ViewportInteractionController.cpp  ViewportInteractionController.h  ViewportOverlayRenderer.cpp  ViewportOverlayRenderer.h  ViewportPanel.cpp  ViewportPanel.h  ViewportSelectionUtils.cpp  ViewportSelectionUtils.h
Editor/Source/Rendering/: Camera.h  CubemapLoader.cpp  CubemapLoader.h  FbxLoader.h  FrustumCulling.h  GizmoRenderer.cpp  GizmoRenderer.h  GridRenderer.cpp  GridRenderer.h  MaterialPreviewRenderer.cpp  MaterialPreviewRenderer.h  ObjLoader.h  PrimitiveMeshes.h  ShaderCompiler.cpp  ShaderCompiler.h  SimpleRenderer.CullingLighting.cpp  SimpleRenderer.PostProcess.cpp  SimpleRenderer.cpp  SimpleRenderer.h  SimpleRendererGraphPasses.cpp  SimpleRendererGraphPasses.h  SimpleRendererSubsystems.h
Editor/Source/Scene/: EditorSceneContext.cpp  EditorSceneContext.h  EditorSelectionState.cpp  EditorSelectionState.h  SceneObject.h  SceneSerializer.cpp  SceneSerializer.h  SceneSettingsAsset.h  SceneSettingsSerializer.cpp  SceneSettingsSerializer.h
Editor/Source/Scripting/: LuaAutoComplete.cpp  LuaAutoComplete.h
Editor/Source/Settings/: EditorSettings.h  ProjectSettingsMetadata.cpp  ProjectSettingsMetadata.h  ProjectSettingsSections.cpp  ProjectSettingsSections.h  ProjectSettingsStorage.cpp  ProjectSettingsStorage.h  ViewSettings.h
Editor/Source/Toolbox/: ToolboxManager.cpp  ToolboxManager.h  ToolboxSettings.h
Editor/Source/UI/: ConfirmationDialog.cpp  ConfirmationDialog.h  UIAssetDocument.cpp  UIAssetDocument.h
Editor/Source/Utils/: FbxImportUtils.cpp  FbxImportUtils.h  FileDialogs.cpp  FileDialogs.h  MaterialImporter.cpp  MaterialImporter.h
Editor/Source/Workspaces/: LayoutWorkspace.cpp  LayoutWorkspace.h  MapWorkspace.cpp  MapWorkspace.h  MaterialWorkspace.cpp  MaterialWorkspace.h  ScriptingWorkspace.cpp  ScriptingWorkspace.h  UIWorkspace.cpp  UIWorkspace.h  Workspace.h
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: Core.cpp  Log.cpp  stb_impl.cpp
Engine/Core/Private/Assets/: AssetManager.cpp
Engine/Core/Private/Crash/: CrashHandling.cpp
Engine/Core/Private/ECS/: World.cpp
Engine/Core/Private/Jobs/: JobSystem.cpp
Engine/Core/Private/Log/: Logger.cpp
Engine/Core/Private/Material/: MaterialGraph.cpp  MaterialNode.cpp
Engine/Core/Private/Memory/: LinearAllocator.cpp  MemorySystem.cpp  MemoryTracker.cpp  PoolAllocator.cpp  StackAllocator.cpp
Engine/Core/Public/Core/: Core.h  Log.h
Engine/RHI/: CMakeLists.txt
Engine/RHI/Private/: FrameGraph.cpp  RHI.cpp
Engine/RHI/Private/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12Common.h  D3D12Device.cpp  D3D12Device.h  D3D12GUI.cpp  D3D12GUI.h  D3D12Pipeline.cpp  D3D12Pipeline.h  D3D12Shader.cpp  D3D12Shader.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Texture.cpp  D3D12Texture.h
Engine/RHI/Public/RHI/: FrameGraph.h  FrameGraphPass.h  FrameGraphResource.h  RHI.h  RHIBuffer.h  RHIDevice.h  RHIGUI.h  RHIPipeline.h  RHIShader.h  RHISwapChain.h  RHITexture.h  RHITypes.h
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Private/Input/: PlayerInputSystem.cpp
Engine/Runtime/Private/Map/: MapCompiler.cpp  MapSerializer.cpp  MapTypes.cpp  StaticWorldGeometry.cpp
Engine/Runtime/Private/Navigation/: NavigationSystem.cpp
Engine/Runtime/Private/Physics/: CharacterControllerSystem.cpp  CollisionLayers.cpp  CollisionMath.cpp  (+1 more)
Game/: CMakeLists.txt
Game/Source/: GameMain.cpp  RuntimeGameApp.cpp  RuntimeGameApp.h  RuntimeSceneRenderer.cpp  RuntimeSceneRenderer.h
Tests/: CMakeLists.txt
Tests/Core/: AssetCookerTests.cpp  AssetManagerTests.cpp  CommandTests.cpp  CoreTests.cpp  CrashHandlingTests.cpp  ECSCrashTest.cpp  ECSTests.cpp  JobSystemTests.cpp  JobsTests.cpp  LoggerTests.cpp  MapTests.cpp  MathTests.cpp  MemoryTests.cpp  NavigationTests.cpp  NodeTests.cpp  PhysicsParallelTests.cpp  PointLightShadowTests.cpp  ReflectTests.cpp  SceneTests.cpp  StableAOPatternTests.cpp  ToolboxTests.cpp  ViewSettingsTests.cpp
Tests/RHI/: FrameGraphTests.cpp  RHITests.cpp
Tools/DotMcpServer/: CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json  server.mjs
(+124 files in other folders)
