# =============================================================================
# Dot Engine - Engine Modules
# =============================================================================

# Core module (Memory, Jobs, Math)
add_subdirectory(Core)

# RHI module (Render Hardware Interface)
add_subdirectory(RHI)

# Runtime module (Scene, physics, input, scripting, runtime interfaces)
add_subdirectory(Runtime)

# Platform abstraction - Future
# add_subdirectory(Platform)
